# photoindex

./: .gitignore  LICENSE  README.md  pyproject.toml
src/photoindex/: __init__.py  cli.py  copyexec.py  copyplan.py  db.py  dedup.py  exif.py  filetypes.py  hashing.py  maintenance.py  scanner.py  schema.sql
src/photoindex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
